--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1,6 +1,6 @@
 #ourtitle {
   text-align: center;
-  font-size: 30px;
+  font-size: 50px;
 }
 
 #form {
@@ -10,4 +10,283 @@
 
 footer {
   bottom: auto;
+}
+html, body, #map-canvas {
+    height: 90%;
+    margin: 0px;
+    padding: 0px
+}
+
+header {
+	color: #4099FF;
+	text-align: center;
+	font-family: Optima, Segoe, 'Segoe UI', Candara, Calibri, Arial, sans-serif;
+}
+
+#map-canvas {
+	border-radius: 10px;
+}
+
+.tabs-menu {
+    height: 30px;
+    float: left;
+    clear: both;
+}
+.tabs-menu li {
+    float: left;
+    margin-right: 10px;
+    background-color: #e5f0ff;
+    border-top: 1px solid #d4d4d1;
+    border-right: 1px solid #d4d4d1;
+    border-left: 1px solid #d4d4d1;
+    list-style-type: none;
+}
+.tabs-menu li.current {
+    position: relative;
+    background-color: #fff;
+    border-bottom: 1px solid #fff;
+    z-index: 5;
+}
+.tabs-menu li a {
+    padding: 10px;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+}
+.tabs-menu .current a {
+    color: #2e7da3;
+}
+.tab {
+    border-top: 1px solid #d4d4d1;
+    background-color: #fff;
+  	width: 100%;
+  	display: inline-block;
+  	margin-top: 5px;
+}
+.tab-content {
+    padding: 20px;
+    display: none;
+}
+
+footer {
+	background-color: #4099FF;
+	height: 80px;
+	color: white;
+	padding-left: 20px;
+  	padding-top: 25px;
+}
+footer > p {
+	float: none;;
+}
+.arrow-top {
+	float: right;
+  	margin-right: 20px;
+  	width: 45px;
+}
+.arrow-top:hover {
+	cursor: pointer;
+	opacity: 0.6;
+}
+
+div.options {
+    margin: 10px;
+}
+div.options input[type="number"] {
+	width: 50px;
+}
+div.options div {
+	display: inline-block;
+	margin-left: 20px;
+}
+div.options div.error {
+	color: red;
+	font-weight: bold;
+	display: none;
+}
+div.options button {
+	border-radius: 5px;
+	margin-left: 20px;
+	color: white;
+	font-weight: bold;
+	padding: 6px;
+}
+
+button[name="twitter_apply_changes"] {
+	border: 2px solid #0084B4;
+	background-color: #10A1FF;
+}
+
+button[name="twitter_apply_changes"]:hover {
+	border: 2px solid #10A1FF;
+	background-color: #0084B4;
+}
+
+button[name="instagram_apply_changes"] {
+	border: 2px solid #cc6700;
+	background-color: #ff8d19;
+}
+
+button[name="instagram_apply_changes"]:hover {
+	border: 2px solid #ff8d19;
+	background-color: #cc6700;
+}
+
+button[name="youtube_apply_changes"] {
+	border: 2px solid #a52a2a;
+	background-color: #cc3636;
+}
+
+button[name="youtube_apply_changes"]:hover {
+	border: 2px solid #cc3636;
+	background-color: #a52a2a;
+}
+
+
+div.contentBox {
+	margin: 15px;
+  	padding: 10px;
+  	border-radius: 10px;
+}
+div.tweets {
+	border: 4px solid #4099FF;
+}
+div.instagrams {
+	border: 4px solid #ff8d19;
+}
+div.youtube_videos {
+	border: 4px solid #a52a2a;
+}
+div.flickr_images {
+	border: 4px solid #ffbad2;
+}
+
+div.content {
+	margin-left: 58px;
+}
+
+img.avatar {
+	float: left;
+  	margin-top: 3px;
+  	width: 48px;
+  	height: 48px;
+  	border-radius: 5px;
+}
+div.flickr-container img.avatar, div.instagram-container img.avatar {
+	border-radius: 25px;
+}
+
+strong.fullname {
+	font-weight: bold;
+	color: #292f33;
+}
+
+p.text {
+	font-size: 16px;
+  	line-height: 22px;
+  	font-weight: 400;
+  	word-wrap: break-word;
+  	white-space: pre-wrap;
+}
+
+a {
+	text-decoration: none;
+	color: #0084B4;
+}
+a:hover {
+	text-decoration: underline;
+}
+
+.username, .time {
+	font-size: 13px;
+  	color: #8899a6;
+  	padding-left: 10px;
+}
+
+.loading-overlay {
+	background-color: #ddf2ff;
+	padding: 25px 0;
+	opacity: 0.8;
+}
+.loading-text, .loading-icon {
+	margin-left: auto;
+  	margin-right: auto;
+  	display: block;
+	color: #0084B4;
+	font-weight: bold;
+	text-align: center;
+}
+
+/******************************************************/
+/**********       Custom Check Box    		 **********/
+/******************************************************/
+
+input[type=checkbox] {
+	visibility: hidden;
+}
+
+.checkboxArea{
+	width: 20px;
+}
+
+.markAsDefault {
+	float: right;
+	position: relative;
+}
+
+.markAsDefault span {
+	margin-left: 5px;
+}
+
+.markAsDefault label {
+	cursor: pointer;
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	top: 0;
+	border-radius: 4px;
+
+	-webkit-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,.4);
+	-moz-box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,.4);
+	box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,.4);
+
+	background: -webkit-linear-gradient(top, #222 0%, #45484d 100%);
+	background: -moz-linear-gradient(top, #222 0%, #45484d 100%);
+	background: -o-linear-gradient(top, #222 0%, #45484d 100%);
+	background: -ms-linear-gradient(top, #222 0%, #45484d 100%);
+	background: linear-gradient(top, #222 0%, #45484d 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#222', endColorstr='#45484d',GradientType=0 );
+}
+
+.markAsDefault label:after {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	filter: alpha(opacity=0);
+	opacity: 0;
+	content: '';
+	position: absolute;
+	width: 9px;
+	height: 5px;
+	background: transparent;
+	top: 4px;
+	left: 4px;
+	border: 3px solid #fcfff4;
+	border-top: none;
+	border-right: none;
+
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	-ms-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+}
+
+.markAsDefault label:hover::after {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+	filter: alpha(opacity=30);
+	opacity: 0.3;
+}
+
+.markAsDefault input[type=checkbox]:checked + label:after {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: alpha(opacity=100);
+	opacity: 1;
 }
